force-app/main/default/objects/Property__c/fields/Has_Available_Units__c.field-meta.xml
<CustomField>
    <fullName>Has_Available_Units__c</fullName>
    <formula>Number_Available_Units__c &gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Available Units</label>
    <type>Checkbox</type>
</CustomField>