force-app/main/default/objects/Property__c/fields/Maintenance_Fees__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Fees__c</fullName>
    <label>Maintenance Fees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>