force-app/main/default/objects/Property__c/fields/Number_Available_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_Available_Units__c</fullName>
    <label>Number Available Units</label>
    <summaryFilterItems>
        <field>Unit__c.Available__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Unit__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>