force-app/main/default/objects/Property__c/fields/Pets_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Pets_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Pets Allowed</label>
    <type>Checkbox</type>
</CustomField>